--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -5,6 +5,14 @@ h4,
 p,
 li {
     font-family: sans-serif;
+    color: #444;
+    }
+    
+    h1,
+    h2,
+    h3,
+    h4 {
+        color: #1098ad;
 }
 
 h1 {
@@ -34,4 +42,32 @@ p {
 
 li {
     font-size: 20px
+}
+#author {
+    font-style: italic;
+    font-size: 18px;
+}
+
+#copyright {
+    font-size: 16px;
+}
+
+.related-author {
+    font-size: 18px;
+    font-weight: bold;
+    color: #f4b23f;
+}
+
+.related {
+    list-style: none;
+}
+
+.main-header {
+    background-color: #f7f7f7;
+}
+
+aside {
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
 }
