--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,12 +1,41 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+
+.main-header {
+    background-color: #f7f7f7;
+    padding: 20px 40px;
+}
+
+nav {
+    font-size: 18px;
+}
+
+.post-header {
+    margin-bottom: 40px;
+}
+
+article {
+    margin-bottom: 60px;
+}
+
+aside {
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
+    padding: 50px 0;
+    margin-bottom: 60px;
+}
+
+body {
     font-family: sans-serif;
     color: #444;
+    border-top: 10px solid #1098ad
 }
+
 
 h1,
 h2,
@@ -23,10 +52,13 @@ h1 {
 
 h2 {
     font-size: 40px;
+    margin-bottom: 30px;
 }
 
 h3 {
     font-size: 30px;
+    margin-bottom: 20px;
+        margin-top: 40px;
 }
 
 h4 {
@@ -36,14 +68,24 @@ h4 {
 }
 
 p {
+    margin-bottom: 15px;
     font-size: 22px;
     line-height: 1.5;
 }
 
+ul,
+ol {
+    margin-left: 50px;
+    margin-bottom: 20px;
+}
 li {
+    margin-bottom: 10px;
     font-size: 20px
 }
 
+li:last-child {
+    margin-bottom: 0;
+}
 #author {
     font-style: italic;
     font-size: 18px;
@@ -63,15 +105,7 @@ li {
     list-style: none;
 }
 
-.main-header {
-    background-color: #f7f7f7;
-}
 
-aside {
-    background-color: #f7f7f7;
-    border-top: 5px solid #1098ad;
-    border-bottom: 5px solid #1098ad;
-}
 li:first-child {
     font-weight: bold;
 }
@@ -79,6 +113,7 @@ li:first-child {
 li:last-child {
     font-style: italic;
 }
+
 /* Styling hyperlinks */
 a:link {
     color: #1098ad;
