--- a/03-CSS-Fundamentals/challenges/style.css
+++ b/03-CSS-Fundamentals/challenges/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: sans-serif;
     line-height: 1.5;
@@ -5,7 +10,9 @@ body {
 }
 
 .product {
-    border: 5px solid #000;
+    border: 4px solid #000;
+    width: 825px;
+    margin: 50px auto;
 }
 
 .product-title {
@@ -13,6 +20,7 @@ body {
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
+    padding: 15px;
 }
 
 .price {
@@ -24,6 +32,11 @@ body {
     color: #777;
     font-size: 12px;
     text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.description {
+    margin-bottom: 10px;
 }
 
 .more-info:link,
@@ -40,19 +53,28 @@ body {
     font-size: 20px;
     text-transform: uppercase;
     font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .product-list {
     list-style: square;
+    margin-left: 20px;
+}
+
+.product-list li {
+    margin-bottom: 10px;
 }
 
 .add-to-cart {
+    width: 100%;
+    padding: 15px;
     font-size: 20px;
     background-color: #000;
     color: #fff;
     text-transform: uppercase;
     cursor: pointer;
-    border: none;
+    border-top: 4px solid #000;
 }
 
 .add-to-cart:hover {
