--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -35,9 +35,10 @@ aside {
 }
 
 body {
+    position: relative;
     font-family: sans-serif;
     color: #444;
-    border-top: 10px solid #1098ad
+    border-top: 10px solid #1098ad;
 }
 
 
@@ -145,6 +146,7 @@ a:active {
     width: 100%;
     height: auto;
 }
+
 nav a:link {
     background-color: #f4b23f;
     display: inline-block;
@@ -155,4 +157,13 @@ nav a:link {
 
 nav a:link:last-child {
     margin-right: 0;
+}
+button {
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
 }
