Worked with pseudo elements

--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -12,6 +12,7 @@
 .main-header {
     background-color: #f7f7f7;
     padding: 20px 40px;
+    margin-bottom: 40px;
 }
 
 nav {
@@ -56,6 +57,7 @@ h1 {
 }
 
 h2 {
+    position: relative;
     font-size: 40px;
     margin-bottom: 30px;
 }
@@ -158,6 +160,7 @@ nav a:link {
 nav a:link:last-child {
     margin-right: 0;
 }
+
 button {
     font-size: 22px;
     padding: 20px;
@@ -166,4 +169,21 @@ button {
     position: absolute;
     bottom: 50px;
     right: 50px;
+}
+h1::first-letter {
+    font-style: normal;
+    margin-right: 5px;
+}
+
+h2::after {
+    content: "TOP";
+    background-color: #ffe70e;
+    color: #444;
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+    position: absolute;
+    top: -10px;
+    right: -25px;
 }
