--- a/03-CSS-Fundamentals/challenges/style.css
+++ b/03-CSS-Fundamentals/challenges/style.css
@@ -13,6 +13,7 @@ body {
     border: 4px solid #000;
     width: 825px;
     margin: 50px auto;
+    position: relative;
 }
 
 .product-title {
@@ -35,6 +36,17 @@ body {
     margin-bottom: 20px;
 }
 
+.sale {
+    color: #fff;
+    background-color: #f00;
+    display: inline-block;
+    padding: 7px 14px;
+    letter-spacing: 2px;
+
+    position: absolute;
+    top: -15px;
+    left: -25px;
+}
 .description {
     margin-bottom: 10px;
 }
@@ -42,6 +54,8 @@ body {
 .more-info:link,
 .more-info:visited {
     color: #000;
+    display: inline-block;
+        margin-bottom: 20px;
 }
 
 .more-info:hover,
@@ -53,7 +67,6 @@ body {
     font-size: 20px;
     text-transform: uppercase;
     font-weight: bold;
-    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -80,4 +93,32 @@ body {
 .add-to-cart:hover {
     background-color: #fff;
     color: #000;
+}
+.color {
+    width: 22px;
+    height: 22px;
+    background-color: black;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
+.blue-color {
+    background-color: #0000ff;
+}
+
+.red-color {
+    background-color: #f00;
+}
+
+.orange-color {
+    background-color: #ffa500;
+}
+
+.green-color {
+    background-color: #008000;
+}
+
+.brown-color {
+    background-color: #a52a2a;
 }
