--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -187,3 +187,23 @@ h2::after {
     top: -10px;
     right: -25px;
 }
+/* FLOATS */
+
+.author-img {
+    float: left;
+    margin-bottom: 20px;
+}
+
+.author {
+    float: left;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+h1 {
+    float: left;
+}
+
+nav {
+    float: right;
+}
