Completed float challenge

--- a/03-CSS-Fundamentals/challenges/style.css
+++ b/03-CSS-Fundamentals/challenges/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -27,13 +28,16 @@ body {
 .price {
     font-size: 22px;
     font-weight: bold;
+    float: left;
 }
 
 .shipping {
     color: #777;
     font-size: 12px;
     text-transform: uppercase;
+    margin-top: 8px;
     margin-bottom: 20px;
+    float: right;
 }
 
 .sale {
@@ -49,6 +53,7 @@ body {
 }
 .description {
     margin-bottom: 10px;
+    clear: both;
 }
 
 .more-info:link,
@@ -98,7 +103,7 @@ body {
     width: 22px;
     height: 22px;
     background-color: black;
-    margin-right: 20px;
+    margin-right: 10px;
     margin-bottom: 20px;
     display: inline-block;
 }
@@ -121,4 +126,22 @@ body {
 
 .brown-color {
     background-color: #a52a2a;
+}
+/* FLOATS */
+.product-img {
+    float: left;
+    margin-right: 40px;
+}
+
+.product-sale {
+    width: 243px;
+    float: left;
+    margin-right: 40px;
+    margin-top: 20px;
+}
+
+.product-prop {
+    float: left;
+    width: 243px;
+    margin-top: 20px;
 }
