--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -155,7 +155,6 @@ a:active {
 nav a:link {
     display: inline-block;
     margin-right: 30px;
-    margin-top: 10px;
 
 }
 
@@ -192,7 +191,7 @@ h2::after {
 }
 
 /* FLOATS */
-
+/*
 .author-img {
     float: left;
     margin-bottom: 20px;
@@ -229,4 +228,64 @@ aside {
 footer {
     background-color: #ffff00;
     clear: both;
+}
+*/
+
+/* FLEXBOX */
+.main-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.author-box {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.author {
+    margin-bottom: 0;
+    margin-left: 15px;
+}
+
+.related-post {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.related-link:link {
+    font-size: 17px;
+    font-weight: bold;
+    font-style: normal;
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+.related-author {
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: italic;
+    color: #444;
+}
+
+.row {
+    display: flex;
+    gap: 75px;
+    margin-bottom: 60px;
+    align-items: flex-start;
+}
+
+article {
+    flex: 1;
+    margin-bottom: 0;
+}
+
+aside {
+    flex: 0 0 300px;
+    margin-bottom: 0;
+
 }
