--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -6,6 +6,11 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/* 
+MAIN COLOR: #087f5b;
+
+GREY COLOR: #343a40;
+*/
 * {
   margin: 0;
   padding: 0;
@@ -17,6 +22,8 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 body {
   font-family: 'Inter', sans-serif;
+  color: #343a40;
+    border-bottom: 8px solid #087f5b;
 }
 
 .container {
@@ -32,7 +39,7 @@ section {
 h2 {
   margin-bottom: 48px;
   font-size: 36px;
-    letter-spacing: -0.5;
+  letter-spacing: -0.5;
 }
 
 .grid-3-cols {
@@ -41,6 +48,30 @@ h2 {
   column-gap: 80px;
 }
 
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+
+.btn--big {
+  font-size: 18px;
+  padding: 16px 32px;
+}
+
+.btn--small {
+  font-size: 14px;
+  padding: 8px 16px;
+}
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -60,14 +91,14 @@ header {
 h1 {
   margin-bottom: 24px;
   font-size: 44px;
-    line-height: 1.1;
+  line-height: 1.1;
     letter-spacing: -1;
 }
 
 .header-text {
   margin-bottom: 24px;
   font-size: 18px;
-    line-height: 1.7;
+  line-height: 1.7;
 }
 
 img {
@@ -75,8 +106,7 @@ img {
 }
 
 /* FEATURES */
-.features-icon {
-}
+.features-icon {}
 
 .features-title {
   margin-bottom: 16px;
@@ -85,12 +115,14 @@ img {
 
 .features-text {
   font-size: 18px;
-    line-height: 1.7;
+  line-height: 1.7;
 }
 
 /* TESTIMONIAL */
 .testimonial-section {
-
+  background-color: #087f5b;
+    color: #fff;
+    padding: 24px;
 }
 
 .testimonial-box {
@@ -101,12 +133,13 @@ img {
 .testimonial-box h2 {
   margin-bottom: 24px;
   font-size: 24px;
+}
 
 .testimonial-text {
   font-style: italic;
   margin-bottom: 24px;
   font-size: 18px;
-    line-height: 1.7;
+  line-height: 1.7;
 }
 
 /* CHAIRS */
@@ -136,8 +169,7 @@ h3 {
   margin-bottom: 0;
 }
 
-.chair-icon {
-}
+.chair-icon {}
 
 .chair-price {
   display: flex;
@@ -148,4 +180,5 @@ h3 {
 footer {
   margin-bottom: 48px;
   font-size: 14px;
+  color: #495057;
 }
