--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -11,6 +11,7 @@ MAIN COLOR: #087f5b;
 
 GREY COLOR: #343a40;
 */
+
 * {
   margin: 0;
   padding: 0;
@@ -106,7 +107,13 @@ img {
 }
 
 /* FEATURES */
-.features-icon {}
+.features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
+
+}
 
 .features-title {
   margin-bottom: 16px;
@@ -169,7 +176,11 @@ h3 {
   margin-bottom: 0;
 }
 
-.chair-icon {}
+.chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
+}
 
 .chair-price {
   display: flex;
