--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -57,6 +57,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 500;
   display: inline-block;
+  border-radius: 100px;
 }
 
 .btn:hover,
@@ -104,6 +105,7 @@ h1 {
 
 img {
   width: 100%;
+  border-radius: 12px;
 }
 
 /* FEATURES */
@@ -130,6 +132,7 @@ img {
   background-color: #087f5b;
     color: #fff;
     padding: 24px;
+    border-radius: 12px;
 }
 
 .testimonial-box {
@@ -152,6 +155,12 @@ img {
 /* CHAIRS */
 .chair {
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+  }
+  
+  .chair img {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 .chair-box {
   padding: 24px;
