--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -34,7 +34,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -83,7 +83,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -91,7 +91,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
     letter-spacing: -1;
@@ -113,7 +113,7 @@ img {
   stroke: #087f5b;
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 
 }
 
@@ -147,11 +147,15 @@ img {
 
 .testimonial-text {
   font-style: italic;
+  color: #e6fcf5;
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
-}
 
+}
+.testimonial-author {
+  color: #c3fae8;
+}
 /* CHAIRS */
 .chair {
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
@@ -163,7 +167,7 @@ img {
     border-bottom-right-radius: 0;
 }
 .chair-box {
-  padding: 24px;
+  padding: 32px;
 }
 
 h3 {
@@ -173,7 +177,7 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 
 }
 
@@ -181,7 +185,7 @@ h3 {
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .chair-details li:last-child {
@@ -198,6 +202,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+  align-items: center;
 }
 
 footer {
